--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.web.*?>
@@ -17,14 +18,20 @@
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
-  <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+  <TabPane prefHeight="867.0" prefWidth="1180.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="0" GridPane.rowIndex="1">
     <tabs>
       <Tab onSelectionChanged="#firsttabchanged" text="web browser">
         <content>
           <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <children>
-              <WebView layoutX="0.0" layoutY="0.0" prefHeight="874.0" prefWidth="1180.0" />
+              <WebView layoutX="0.0" layoutY="60.0" prefHeight="814.0" prefWidth="1180.0" />
+              <ImageView disable="false" fitHeight="355.0" fitWidth="355.0" mouseTransparent="true" opacity="0.76" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="397.0" AnchorPane.leftAnchor="83.0" AnchorPane.rightAnchor="742.0" AnchorPane.topAnchor="82.0">
+                <image>
+                  <Image url="https://1.gravatar.com/avatar/6402bcce6f701e917966aed238bed33b?d=https%3A%2F%2Fidenticons.github.com%2F81b434924e1da170549d6a59e1e5920f.png" />
+                </image>
+              </ImageView>
             </children>
           </AnchorPane>
         </content>
@@ -57,6 +64,36 @@
           </AnchorPane>
         </content>
       </Tab>
+      <Tab text="website">
+        <content>
+          <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <children>
+              <Button fx:id="btnCompendiumng" layoutX="91.0" layoutY="74.0" mnemonicParsing="false" onAction="#onBtnCompendiumPress" prefHeight="27.0" prefWidth="192.0" text="www.compendiumng.org" />
+              <Button fx:id="btnGoogle" layoutX="91.0" layoutY="140.0" mnemonicParsing="false" onAction="#onBtnGooglePress" prefWidth="192.0" text="www.google.com" />
+              <Button fx:id="btnHtml5test" layoutX="91.0" layoutY="188.0" mnemonicParsing="false" onAction="#onBtnHtml5test" prefWidth="192.0" text="HTML 5 test" />
+            </children>
+          </AnchorPane>
+        </content>
+      </Tab>
     </tabs>
   </TabPane>
+  <MenuBar prefHeight="27.0" prefWidth="1180.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
+    <menus>
+      <Menu mnemonicParsing="false" text="File">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Close" />
+        </items>
+      </Menu>
+      <Menu mnemonicParsing="false" text="Edit">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Delete" />
+        </items>
+      </Menu>
+      <Menu mnemonicParsing="false" text="Help">
+        <items>
+          <MenuItem mnemonicParsing="false" text="About" />
+        </items>
+      </Menu>
+    </menus>
+  </MenuBar>
 </GridPane>
